# 07_end_to_end_data_engineering_pipeline

./: .gitignore  README.md  pyproject.toml  random_file_0.txt  random_file_1.txt  random_file_2.txt
docs/: architecture.md  milestone_2026-03-02.md
orchestration/: README.md  notes_2026-03-08_3f39de2c.md  notes_2026-03-10_20e7005f.md
src/: data_quality.py
tests/: test_data_quality.py
